send coin fix txid link overflow

--- a/src/uiv2.scss
+++ b/src/uiv2.scss
@@ -669,6 +669,14 @@
     position: relative;
     top: 2px;
   }
+  .notification.is-success {
+    word-break: break-all;
+
+    .copy-btn {
+      height: 24px !important;
+      top: 4px !important;
+    }
+  }
 }
 
 .Modal-coin-settings {
